Fix Press page spacing

--- a/src/Styles/Press.css
+++ b/src/Styles/Press.css
@@ -2,7 +2,7 @@
     width: 75%;
     margin: 0 auto !important;
     float: none !important;
-    padding-bottom: 100px;
+    /* padding-bottom: 80px; */
 }
 
 .Press-header {
@@ -30,7 +30,7 @@
 }
 
 .Press-images img {
-    height: 75%;
+    width: 200px;
     margin-top: 50px;
 }
 
